Started ResolveGameTest plus minor cleanups